# SkillBox_exesises

./: CMakeLists.txt  c_api.cpp  c_api.h  export.h  main.cpp  matrix.cpp  matrix.h  test-shared-matrix.cpp  test-static-matrix.cpp
exe/: CMakeLists.txt  main.cpp
lib/: c_api.cpp  c_api.h  matrix.cpp  matrix.h  test-shared-matrix.cpp
